--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,33 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>{{ page.title }}</title>
-    <p><a href="/" class="blue">首页</a> <a href="/about.html" class="blue">关于我</a> <a href="/categories.html" class="blue">分类</a> <a href="/tags.html" class="blue">标签</a> <a href="/project.html" class="blue">项目</a> <a href="/place.html" class="blue">足迹</a> <a href="/board.html" class="blue">留言板</a> <a href="/links.html" class="blue">友链</a></p>
-    <hr />
-    <h1>{{ page.title }}</h1>
-    <script>
-      var sHTML="<img src=\"/banner/{N}.jpg\">"
-      document.write(sHTML.replace("{N}",Math.random()*8|0))
-    </script>
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-34491513-1']);
-      _gaq.push(['_trackPageview']);
+    <meta charset="utf-8">
+    <title>
+      {{ page.title }}{% if page.url != "/index.html" %} - s1n4{% endif %}
+    </title>
+    <meta name="author" content="s1n4 (Sina Samavati)">
+    <meta name="description" content="s1n4's blog">
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
+    <link rel="alternate" href="/atom.xml" type="application/atom+xml">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu+Mono">
+    <link rel="stylesheet" href="http://coderwall.com/stylesheets/jquery.coderwall.css">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   </head>
+
   <body>
-    {{ content }}
-    <hr />
-     Made on a Mac. Powered by jekyll and github page.
-    <a href="https://github.com/Perrydu/Perry"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://pic.yupoo.com/perrydu/Ce5W9UMv/duiIc.png" alt="Fork me on GitHub" /></a>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">s1n4 (Sina Samavati)</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><a href="/">Home</a></li>
+              <li><a href="/projects">Projects</a></li>
+              <li><a href="/contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="content">
+        <div class="page-header">
+          <h2>{{ page.title }}</h2>
+        </div>
+        <div class="row">
+          <div class="span9">
+            {{ content }}
+          </div>
+          <div class="span3">
+            {% include about %}
+          </div>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <div class="row">
+          <div class="span12">
+            <p>Have project? Need help? Anything else?
+              feel free to <a href="mailto:contact@s1n4.com?subject=hey">contact</a> me.</p>
+            <p>© 2012 Sina Samavati</p>
+          </div>
+      </footer>
+    </div>
+
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/applications.js"></script>
+    <script src="http://coderwall.com/javascripts/jquery.coderwall.js"></script>
+
   </body>
 </html>
