--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>luoxiaobing | 罗小兵</title>
+  <title>小兵blog | 罗小兵</title>
   <meta name="author" content="luoxiaobing | 罗小兵"/>
   <meta name="viewport" content="width=device-width; initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/media/css/home.css">
