--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>小兵blog | 罗小兵</title>
-  <meta name="author" content="luoxiaobing | 罗小兵"/>
+  <title>小兵blog | xiaobing</title>
+  <meta name="author" content="xiaobing"/>
   <meta name="viewport" content="width=device-width; initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/media/css/home.css">
   <style type="text/css">
@@ -43,13 +43,13 @@
 </head>
 <body>
   <div class="container">
-  <h1 class="sitename">luoxiaobing</h1>
+  <h1 class="sitename">xiaobing</h1>
   <ul class="nav pills">
   <li><a href="/">Home</a></li>
 </ul>
 {{ content }}
 <footer>
-  <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> on GitHub | Copyright 2005 - {{site.time | date:"%Y"}} by <a href="http://www.08optics.com">luoxiaobing</a> | <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S"}}</span></small></p>
+  <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> on GitHub | Copyright 2005 - {{site.time | date:"%Y"}} by <a href="http://www.08optics.com">xiaobing</a> | <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S"}}</span></small></p>
 </footer>
 </div>
 </body>
