--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <div class="container">
-  <h1 class="sitename">xiaobing</h1>
+  <h1 class="sitename">小兵Blog</h1>
   <ul class="nav pills">
   <li><a href="/">Home</a></li>
 </ul>
